# parallelIterativeMethods

./: CMakeLists.txt  README.md
lib/Eigen/: CMakeLists.txt  Core
lib/Eigen/src/Cholesky/: LDLT.h  LLT.h
lib/Eigen/src/CholmodSupport/: CholmodSupport.h
lib/Eigen/src/Core/: Array.h  ArrayBase.h  AssignEvaluator.h  Block.h  CommaInitializer.h  ConditionEstimator.h  CoreEvaluators.h  DenseBase.h  DenseStorage.h  DiagonalMatrix.h  GeneralProduct.h  GenericPacketMath.h  Matrix.h  PlainObjectBase.h  Product.h  ProductEvaluators.h  Redux.h  ReturnByValue.h  SelfAdjointView.h  SolveTriangular.h  SolverBase.h  StableNorm.h  Transpose.h  Transpositions.h
lib/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  HessenbergDecomposition.h  RealQZ.h  RealSchur.h  SelfAdjointEigenSolver.h
lib/Eigen/src/Geometry/: OrthoMethods.h  Quaternion.h  RotationBase.h  Transform.h  Umeyama.h
lib/Eigen/src/Householder/: HouseholderSequence.h
lib/Eigen/src/IterativeLinearSolvers/: BasicPreconditioners.h  BiCGSTAB.h  IncompleteCholesky.h  IncompleteLUT.h  IterativeSolverBase.h
lib/Eigen/src/LU/: FullPivLU.h  PartialPivLU.h
lib/Eigen/src/MetisSupport/: MetisSupport.h
lib/Eigen/src/OrderingMethods/: Eigen_Colamd.h  Ordering.h
lib/Eigen/src/PaStiXSupport/: PaStiXSupport.h
lib/Eigen/src/PardisoSupport/: PardisoSupport.h
lib/Eigen/src/QR/: ColPivHouseholderQR.h  CompleteOrthogonalDecomposition.h  FullPivHouseholderQR.h  HouseholderQR.h
lib/Eigen/src/SPQRSupport/: SuiteSparseQRSupport.h
lib/Eigen/src/SVD/: BDCSVD.h  JacobiSVD.h  SVDBase.h  UpperBidiagonalization.h
lib/Eigen/src/SparseCholesky/: SimplicialCholesky.h  SimplicialCholesky_impl.h
lib/Eigen/src/SparseCore/: AmbiVector.h  ConservativeSparseSparseProduct.h  SparseBlock.h  SparseColEtree.h  SparseCompressedBase.h  SparseDenseProduct.h  SparseDiagonalProduct.h  SparseDot.h  SparseMap.h  SparseMatrix.h  SparseMatrixBase.h  SparseRedux.h  SparseRef.h  SparseSelfAdjointView.h  SparseSolverBase.h  SparseSparseProductWithPruning.h
lib/Eigen/src/SparseLU/: SparseLU.h  SparseLU_Memory.h  SparseLU_Structs.h  SparseLU_SupernodalMatrix.h  SparseLU_gemm_kernel.h  SparseLU_kernel_bmod.h  SparseLU_panel_bmod.h  SparseLU_panel_dfs.h
lib/Eigen/src/SparseQR/: SparseQR.h
lib/Eigen/src/StlSupport/: StdVector.h  details.h
lib/Eigen/src/SuperLUSupport/: SuperLUSupport.h
lib/Eigen/src/misc/: Image.h  Kernel.h
lib/Eigen/src/plugins/: ArrayCwiseBinaryOps.h  (+3 more)
src/: asyncBlocksJacobi.h  asyncJacobi.h  asyncOverlappingJacobi.h  denseAsyncBlocksJacobi.h  denseAsyncJacobi.h  denseAsyncOverlappingJacobi.h  denseBlocksJacobi.h  denseFixedBlocksJacobi.h  denseOptimizedBlocksJacobi.h  denseOptimizedOverlappingJacobi.h  denseOverlappingJacobi.h  denseParallelJacobi.h  denseSerialJacobi.h  jacobi.h  main.cpp  parser.cpp  parser.h  sparseAsyncBlocksJacobi.h  sparseAsyncJacobi.h  sparseAsyncOverlappingJacobi.h  sparseBlocksJacobi.h  sparseFixedBlocksJacobi.h  sparseOptimizedBlocksJacobi.h  sparseOptimizedOverlappingJacobi.h  sparseOverlappingJacobi.h  sparseParallelJacobi.h  sparseSerialJacobi.h  utils.h
(+23 files in other folders)
